--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="jquery.mobile-1.3.2.min.css">
+<meta content="width=device-width, minimum-scale=1, maximum-scale=2" name="viewport"> 
 <script src="jquery-1.8.3.min.js"></script>
 <script src="jquery.mobile-1.3.2.min.js"></script>
 <script src="numero.js"></script>
@@ -145,6 +146,10 @@ $("input:radio[name=syst]").click(function() {
     sysval = parseInt( $(this).val(),10);
     
 });
+
+$(document).bind('mobileinit', function(){
+$.mobile.metaViewportContent = 'width=device-width';
+}); 
 });
 </script>
 
@@ -214,9 +219,9 @@ $("input:radio[name=syst]").click(function() {
 
    </div>
    <div id="pCalc" align="center">Calc</div>
-   <p id="work1"><u>Show Working</u></p>
+   <p id="work1"><u>Hide Working</u></p>
    <script>
-   var sh = 0;
+   var sh = 1;
  	$('p#work1').click(function(){
  	if (sh==0){
  	 	$('div#pCalc').show();
