--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="jquery.mobile-1.3.2.min.css">
-<meta content="width=device-width, minimum-scale=1, maximum-scale=2" name="viewport"> 
+
 <script src="jquery-1.8.3.min.js"></script>
+<script src="custom.js"></script>
+<meta content="width=device-width, minimum-scale=1, user-scalable=1" name="viewport"  > 
 <script src="jquery.mobile-1.3.2.min.js"></script>
 <script src="numero.js"></script>
 <script src="numero2.js"></script>
