--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <script src="jquery-1.8.3.min.js"></script>
 <script src="custom.js"></script>
-<meta content="width=device-width, minimum-scale=1, user-scalable=1" name="viewport"  > 
+<meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=12.0, minimum-scale=.25, user-scalable=yes"/>
 <script src="jquery.mobile-1.3.2.min.js"></script>
 <script src="numero.js"></script>
 <script src="numero2.js"></script>
