--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <script src="jquery-1.8.3.min.js"></script>
 <script src="custom.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=12.0, minimum-scale=.25, user-scalable=yes"/>
+<meta name="viewport" content="width=device-width, initial-scale=2, maximum-scale=12.0, minimum-scale=1, user-scalable=yes"/>
 <script src="jquery.mobile-1.3.2.min.js"></script>
 <script src="numero.js"></script>
 <script src="numero2.js"></script>
@@ -160,7 +160,7 @@ $.mobile.metaViewportContent = 'width=device-width';
 <body>
 
 <div data-role="page" id="pageone">
-  <div data-role="header">
+  <div>
     <h2>Pyramid Number</h2>
 	<h3>a.k.a. Hebrew Number</h3>
   </div>
@@ -180,7 +180,7 @@ $.mobile.metaViewportContent = 'width=device-width';
 <a href="#pagethree" data-transition="slide">Results Page</a>
 
   </div>
-  <div data-role="footer">
+  <div>
     <h1>@copyright Astraura</h1>
   </div>
 </div> 
@@ -209,12 +209,12 @@ $.mobile.metaViewportContent = 'width=device-width';
 
   </div>
 
-  <div data-role="footer">
+  <div >
     <h1>@copyright Astraura</h1>
   </div>
 </div> 
 <div data-role="page" id="pagethree">
-  <div data-role="header">
+  <div >
     <h1>Result</h1>
   </div>
    <div id="result" align="center">
@@ -252,7 +252,7 @@ $.mobile.metaViewportContent = 'width=device-width';
     <a href="#pageone" data-transition="slide" data-direction="reverse">Go back to Page One</a>
   </div>
 
-  <div data-role="footer">
+  <div>
     <h1>@copyright Astraura</h1>
     email: astraura@gmail.com 
   </div>
@@ -287,7 +287,7 @@ NOPQRSTUVWXYZ
         </div>
 </div>
 <div data-role="page" id="pagefive">
-  <div data-role="header">
+  <div>
     <h1>Sum of Products</h1>
   </div>
 
@@ -298,7 +298,7 @@ NOPQRSTUVWXYZ
   </div>
   </div>
 <div data-role="page" id="pagesix">
-  <div data-role="header">
+  <div>
     <h1>Sum of Products</h1>
   </div>
 
