--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <script src="jquery-1.8.3.min.js"></script>
 <script src="custom.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=2, maximum-scale=12.0, minimum-scale=1, user-scalable=yes"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.5, maximum-scale=12.0, minimum-scale=1, user-scalable=yes"/>
 <script src="jquery.mobile-1.3.2.min.js"></script>
 <script src="numero.js"></script>
 <script src="numero2.js"></script>
@@ -160,7 +160,7 @@ $.mobile.metaViewportContent = 'width=device-width';
 <body>
 
 <div data-role="page" id="pageone">
-  <div>
+  <div  data-role="header">
     <h2>Pyramid Number</h2>
 	<h3>a.k.a. Hebrew Number</h3>
   </div>
@@ -180,7 +180,7 @@ $.mobile.metaViewportContent = 'width=device-width';
 <a href="#pagethree" data-transition="slide">Results Page</a>
 
   </div>
-  <div>
+  <div data>
     <h1>@copyright Astraura</h1>
   </div>
 </div> 
@@ -209,12 +209,12 @@ $.mobile.metaViewportContent = 'width=device-width';
 
   </div>
 
-  <div >
+  <div  data-role="footer">
     <h1>@copyright Astraura</h1>
   </div>
 </div> 
 <div data-role="page" id="pagethree">
-  <div >
+  <div  data-role="header">
     <h1>Result</h1>
   </div>
    <div id="result" align="center">
@@ -252,13 +252,16 @@ $.mobile.metaViewportContent = 'width=device-width';
     <a href="#pageone" data-transition="slide" data-direction="reverse">Go back to Page One</a>
   </div>
 
-  <div>
+  <div  data-role="footer">
     <h1>@copyright Astraura</h1>
     email: astraura@gmail.com 
   </div>
 </div> 
 
 <div data-role="page" id="pagefour">
+ <div data-role="header">
+ <h4>Number equivalents for alphabets. </h4>
+ </div>
    <div data-role="content">
 
                 <pre>*Chaldean / Cheiro 				
@@ -287,7 +290,7 @@ NOPQRSTUVWXYZ
         </div>
 </div>
 <div data-role="page" id="pagefive">
-  <div>
+  <div  data-role="header">
     <h1>Sum of Products</h1>
   </div>
 
@@ -312,7 +315,7 @@ NOPQRSTUVWXYZ
 <a href="#pageone" data-transition="slide" data-direction="reverse">Back to Input page</a>
     <p id="pCalc3" align="center">Product based Pyramid for names.</p>
     
-    <p><a href="http://www.lotterypost.com/thread/264618" title="Lottery1" target="_blank">Lottery Pick Method using sums</a> (external site)</p>
+    <p><a href="http://www.lotterypost.com/thread/264618" title="Lottery1">Lottery Pick Method using sums</a> (external site)</p>
 <a href="#pagethree"  data-transition="slide" data-direction="reverse">Back to last page</a>
   </div>
   </div>
