--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@ $.mobile.metaViewportContent = 'width=device-width';
  </form>
 <br>
 <a href="#pagetwo" data-transition="fade">Settings Page</a>
-<br>
+<br><br>
 <a href="#pagethree" data-transition="slide">Results Page</a>
 
   </div>
-  <div data>
+  <div  data-role="footer">
     <h1>@copyright Astraura</h1>
   </div>
 </div> 
@@ -204,7 +204,7 @@ $.mobile.metaViewportContent = 'width=device-width';
 
 
     <p>Click on the link to go back.     
-    <a href="#pageone">Go back to Page One</a>
+    <a href="#pageone">Go back to Page One</a> <br><br>
     <a href="#pagethree" data-transition="fade">Results Page</a>
 
   </div>
@@ -248,7 +248,7 @@ $.mobile.metaViewportContent = 'width=device-width';
 
    <div data-role="content">
 
-   <p>Click on the link to go back. 
+   
     <a href="#pageone" data-transition="slide" data-direction="reverse">Go back to Page One</a>
   </div>
 
